styles/style.css
.montserrat-medium, .search__p {
  font-family: 'Montserrat', sans-serif;
  font-size: 14px;
  color: #572EE5;
  line-height: 25px;
  text-align: center; }

.montserrat-bold, .navigation__list, .header__title, .header__title span, .search__title, .results__title, .results__button, .trending__title {
  font-family: 'Montserrat', sans-serif;
  font-size: 15px;
  color: #572EE5;
  line-height: 60px;
  text-align: center; }

.roboto-regular, .search__box__input, .search__box__li, .trending__p, .trending__p__span {
  font-family: 'Roboto', sans-serif;
  font-size: 16px;
  text-align: left;
  color: #000000; }

.button__slide, .trending__prev__button, .trending__next__button {
  height: 40px;
  width: 40px;
  border: 1px solid #572EE5; }

.card-options {
  height: 32px;
  width: 32px; }
  .card-options:hover {
    border-radius: 6px;
    opacity: 0.7;
    background: #FFFFFF; }

.top-bar {
  padding: 34px 26px 0 22px;
  height: 100px;
  width: 100vw;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  border-top: 5px solid #572EE5; }

.nav-bar {
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center; }
  .nav-bar__logo {
    height: 49px;
    width: 54px;
    -webkit-box-sizing: border-box;
            box-sizing: border-box; }
    .nav-bar__logo__dark {
      display: none; }

.navigation__list {
  padding: 17px 0 0 0;
  height: 100vh;
  width: 100%;
  left: -150%;
  position: absolute;
  display: inline-block;
  list-style: none;
  color: #FFFFFF;
  background: rgba(87, 46, 229, 0.9);
  -webkit-transition: left .5s ease-in-out;
  transition: left .5s ease-in-out; }
.navigation__li {
  padding: 1em;
  height: 60px;
  position: relative;
  text-align: center; }
  .navigation__li::after {
    width: 41px;
    left: 45%;
    bottom: 0;
    position: absolute;
    content: "";
    opacity: 0.5;
    border-bottom: 1px solid #FFFFFF; }
  .navigation__li__dark {
    display: none; }
.navigation a {
  color: #FFFFFF;
  text-decoration: none; }
  .navigation a:hover {
    letter-spacing: 0;
    text-decoration: underline;
    -webkit-text-decoration-color: #5ED7C6;
            text-decoration-color: #5ED7C6; }
  .navigation a:active {
    color: #9CAFC3;
    text-decoration: none; }

.header {
  margin: 7px auto 31px auto;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center; }
  .header__title {
    margin: 0;
    height: 99px;
    width: 286px;
    font-size: 25px;
    line-height: 33px; }
    .header__title span {
      font-size: 25px;
      line-height: 33px;
      color: #46e0b6; }

.search {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center; }
  .search__picture {
    text-align: center;
    height: 130px; }
    .search__picture__image {
      height: 130px;
      width: 273px; }
  .search__box {
    margin: 0;
    height: auto;
    width: 334px;
    -webkit-box-sizing: content-box;
            box-sizing: content-box;
    border: 1px solid #572EE5;
    border-radius: 27px;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center; }
    .search__box__main {
      margin: 12px auto auto 0;
      padding-right: 5px;
      position: relative;
      display: -webkit-box;
      display: -ms-flexbox;
      display: flex;
      -ms-flex-pack: distribute;
          justify-content: space-around; }
    .search__box__icon-list {
      height: 20px;
      width: 20px;
      left: 25px;
      position: absolute;
      visibility: hidden; }
    .search__box__input {
      margin-left: 38px;
      height: 22px;
      width: 210px;
      border: 0;
      outline: #572EE5;
      text-align: left; }
      .search__box__input::-webkit-calendar-picker-indicator {
        display: none; }
    .search__box__icon {
      height: 20px;
      width: 20px;
      outline: none; }
    .search__box__x {
      padding-top: 3px;
      height: 14px;
      width: 14px;
      display: none; }
    .search__box__list {
      margin: 10px 21.6px;
      padding-left: 8px;
      position: relative;
      background: #FFFFFF;
      list-style: none; }
      .search__box__list::after {
        height: 3px;
        width: 280px;
        top: 0;
        left: 10px;
        position: absolute;
        content: "";
        opacity: 0.5;
        border-top: 1px solid #9CAFC3; }
    .search__box__li {
      padding: 5px;
      color: #9CAFC3;
      cursor: pointer; }
      .search__box__li::before {
        margin-right: 14.6px;
        height: 10px;
        width: 10px;
        display: inline-block;
        content: "";
        background-color: #9CAFC3;
        -webkit-mask-image: url("/assets/icon-search.svg");
                mask-image: url("/assets/icon-search.svg");
        -webkit-mask-size: cover;
                mask-size: cover; }
      .search__box__li:nth-child(1) {
        padding-top: 14px; }
  .search__title {
    margin: 31px auto 2px auto;
    font-size: 16px;
    line-height: 25px; }
  .search__p {
    margin: 0;
    width: 225px; }

.results__container {
  margin: 35px auto 0 auto;
  padding-top: 43px;
  width: 100vw;
  position: relative;
  display: none;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column; }
  .results__container::before {
    width: 157px;
    top: 0;
    position: absolute;
    content: "";
    opacity: 0.5;
    border-top: 1px solid #9CAFC3;
    -ms-flex-item-align: center;
        align-self: center; }
.results__title {
  margin: 0;
  height: 40px;
  font-size: 25px;
  line-height: 40px; }
.results__cards {
  margin: 13px auto 78px auto;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -ms-flex-pack: distribute;
      justify-content: space-around; }
.results__card {
  margin-top: 25px;
  height: 120px;
  width: 156px;
  position: relative; }
  .results__card__options {
    width: 260px;
    top: 0;
    position: absolute;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-pack: distribute;
        justify-content: space-around;
    justify-items: flex-end; }
.results__button {
  margin: 0 auto 34px auto;
  height: 50px;
  width: 127px;
  border: 1px solid #572EE5;
  border-radius: 25px;
  border-radius: 25px;
  font-size: 13px;
  font-weight: bold;
  line-height: unset;
  letter-spacing: 0; }
  .results__button:hover {
    color: #FFFFFF;
    letter-spacing: 0;
    border-radius: 25px;
    background: #572EE5; }

.trending {
  margin-top: 45px;
  height: 430px;
  background: #F3F5F8; }
  .trending__title {
    margin: 44px auto 9px auto;
    padding-top: 44px;
    height: 30px;
    font-size: 25px;
    line-height: 30px; }
  .trending__p {
    margin: 0;
    height: 46px;
    line-height: 23px;
    text-align: center; }
    .trending__p__span {
      display: block;
      line-height: 23px;
      text-align: center; }
  .trending__slide {
    margin: auto;
    padding: 32px auto 82px auto;
    max-width: 1000px;
    position: relative;
    -webkit-box-sizing: border-box;
            box-sizing: border-box; }
  .trending__card {
    margin: 0 11px;
    height: 187px;
    width: 243px;
    display: none; }
  .trending__prev {
    left: 0; }
  .trending__next {
    right: 0; }
  .trending__prev, .trending .trending__next {
    margin-top: -22px;
    padding: 16px;
    top: 50%;
    height: 40px;
    width: 40px;
    position: absolute;
    color: white;
    font-weight: bold;
    font-size: 18px;
    border: 1px solid #572EE5;
    -webkit-transition: 0.6s ease;
    transition: 0.6s ease;
    cursor: pointer; }

.footer {
  height: 201px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  text-align: center;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  border-bottom: 5px solid #572EE5; }
  .footer__social-network {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    font-size: 15px;
    color: #000000;
    letter-spacing: 0; }
    .footer__social-network__icons {
      margin-bottom: 46px;
      -ms-flex-pack: distribute;
          justify-content: space-around; }
      .footer__social-network__icons a {
        margin-right: 19px;
        height: -webkit-min-content;
        height: -moz-min-content;
        height: min-content;
        width: -webkit-min-content;
        width: -moz-min-content;
        width: min-content;
        text-decoration: none; }
        .footer__social-network__icons a:nth-child(3) {
          margin-right: 0; }
        .footer__social-network__icons a svg > path:hover {
          fill: #572EE5; }
    .footer__social-network__p {
      margin: 47px auto 22px auto; }
  .footer__p {
    margin: 0 auto 23px auto;
    font-size: 14px;
    color: #000000;
    letter-spacing: 0;
    line-height: 20px; }

/*# sourceMappingURL=style.css.map */

